# hydrosheds

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  INSTALL.md  example.py  pyproject.toml
include/hydrosheds/: bbox.hpp  dataset.hpp  parallel_for.hpp  tile_cache.hpp
src/: dataset.cpp  main.cpp  tile_cache.cpp
